...
    var body: some View {
        VStack{
            ZStack{
                Spacer()
                .fullScreenCover(isPresented: $showPlusView, content:  {
                    CreateNewHabit(showPlusView: $showPlusView)
                        .accessibilityIdentifier("CreateNewHabitView")
                })
                
                switch selectedTab {
                case 0 :
                    NavigationView{
                        HomePageTabView()
...
                        .font(.system(size: 50))
                        .foregroundColor(.white)
                        .padding(10)
                        .background(Color.green, in: Circle())
                        .shadow(radius: 5)
                        .padding(.bottom,20)
                }.accessibilityIdentifier("centralPlusButton")
                .offset(y: -40)
                    
                
                HStack {


...
